# samtools-py

./: .gitignore  README.md  hatch_build.py  pyproject.toml
samtools_py/: exec_real_time.py  main.py
