[project]
name = "samtools-py"
version = "2025.4.23.0"
description = "samtools python wrapper (Windows only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/soda92/samtools_py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["samtools_py"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso", "*.sam"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["samtools_py"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso", "*.sam"]

[tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[project.scripts]
bowtie2 = "samtools_py.main:main"
